codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__running_exec_live_output_scrolls.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Running echo streaming
  └ ┌ live output · pgup (fn + ↑)/pgdn (fn + ↓) to scroll
    │ line 1
    │ line 2
    │ line 3
    │ line 4
    │ line 5
    └
