codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__running_exec_shows_live_output_box.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Running echo streaming
  └ ┌ live output · pgup (fn + ↑)/pgdn (fn + ↓) to scroll
    │ line 3
    │ line 4
    │ line 5
    │ line 6
    │ line 7
    └
